--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,13 +1,17 @@
 <div>
     <!-- Tabs navs -->
     <ul class="nav nav-tabs mt-2 mb-3 d-flex justify-content-center" id="ex1" role="tablist">
-        <li class="nav-item" role="presentation">
+        <li class="nav-item" role="button">
             <a class="nav-link fw-bold active" hx-get="./pages/projects-1.html" hx-swap="innerHTML" hx-target="#proj-tab-content" hx-trigger="load, click" id="proj-tab-1" role="tab">Petroleum Engineering</a>
         </li>
-        <li class="nav-item" role="presentation">
+        <li class="nav-item" role="button">
+            <a class="nav-link fw-bold" hx-get="./pages/projects-2.html" hx-swap="innerHTML" hx-target="#proj-tab-content" hx-trigger="click" id="proj-tab-2" role="tab">Web Development</a>
+        </li>
+
+        <li class="nav-item" role="button">
             <a class="nav-link fw-bold" id="proj-tab-2" role="tab">Software and Web Development</a>
         </li>
-        <li class="nav-item" role="presentation">
+        <li class="nav-item" role="button">
             <a class="nav-link fw-bold" id="proj-tab-3" role="tab">Others</a>
         </li>
     </ul>
