--- a/pages/education.html
+++ b/pages/education.html
@@ -1,11 +1,108 @@
-<div class="row">
-  <div class="col-md-8">
-    <div class="card p-3">
-      <div class="d-flex flex-rows">
-        <h1>Petroleum Reservoir Engineering (Bsc)</h1>
-        <h3>Petroleum University of Technology</h3>
-        <h6>2011-2015</h6>
-      </div>
-    </div>
-  </div>
+<div class="bg-dark p-3 p-md-5 vh-100 ">
+	<div class="rounded">
+		<div class="col-sm-10 col-md-8 card-hover-effect">
+			<div class="text-white">
+				<h4>Petroleum Reservoir Engineering</h4>
+				<h6>Petroleum University of Technology (PUT)</h6>
+				<h6>Tehran, Iran</h6>
+				<h6 class="fst-italic">2011-2015</h6>
+			</div>
+		</div>
+
+		<div class="row mt-2 mt-md-4">
+			<div class="col-lg-3 mb-2 ">
+				<div class="border border-1 border-secondary rounded-top rounded-3 hover-scale-up">
+					<div class="bg-white">
+						<span class="text-dark px-2 py-1">Activities and Societies</span>
+					</div>
+					<div class="px-2 py-1 text-white fw-light">
+						<ul>
+							<li>
+								Petroleum University of Technology Chem E Car's Team Chair for two consecutive years
+							</li>
+							<li>
+								Member of student committee of 4th research Festival of Petroleum University of
+								Technology
+							</li>
+							<li>
+								President of EAGE Student Chapter in Petroleum University of Technology
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-3 mb-2 ">
+				<div class="border border-1 border-secondary rounded-top rounded-3 hover-scale-up">
+					<div class="bg-white">
+						<span class="text-dark px-2 py-1">Honors and Awards</span>
+					</div>
+					<div class="px-2 py-1 text-white fw-light">
+						<ul>
+							<li>
+								2nd place winner (Poster Competition) in 9th national Chem-E-Car competition
+							</li>
+							<li>
+								3rd place winner in 8th national Chem-E-Car competition
+							</li>
+							<li>
+								National Iranian Oil Company’s Scholarship for Petroleum Engineering Studies at
+								Petroleum University of Technology
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-3 mb-2 ">
+				<div class="border border-1 border-secondary rounded-top rounded-3 hover-scale-up">
+					<div class="bg-white">
+						<span class="text-dark px-2 py-1">Publications</span>
+					</div>
+					<div class="px-2 py-1 text-white fw-light">
+						<ul>
+							<li>
+								Impacts of Spatial Distribution of Pore Fluids and Heat Flow Direction on Effective
+								Thermal Conductivity of Rocks
+								<a class="fst-italic text-small" href="https://doi.org/10.3997/2214-4609.201601065">https://doi.org/10.3997/2214-4609.201601065</a>
+							</li>
+							<li>
+								Comparative Study of Different Oil and Gas Relative Permeability Models for Iranian
+								Carbonates [A Statistical Approach]
+								<a class="fst-italic text-small" href="https://doi.org/10.3997/2214-4609.201600206">https://doi.org/10.3997/2214-4609.201600206</a>
+
+							</li>
+							<li>
+								Design and Construction of a High Pressure and High Temperature Apparatus for Measuring
+								Rock Thermal Conductivity
+								<a class="fst-italic text-small" href="https://doi.org/10.3997/2214-4609.201600201">https://doi.org/10.3997/2214-4609.201600201</a>
+
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-3 mb-2 ">
+				<div class="border border-1 border-secondary rounded-top rounded-3 hover-scale-up">
+					<div class="bg-white">
+						<span class="text-dark px-2 py-1">Patents</span>
+					</div>
+					<div class="px-2 py-1 text-white fw-light">
+						<ul>
+							<li>
+
+
+								Design and Construction of High Pressure and High Temperature Appratus for Measuring
+								Rock Thermal Conductivity with Fluid Injectivity
+							</li>
+
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	</div>
 </div>
