--- a/pages/projects-2.html
+++ b/pages/projects-2.html
@@ -1,4 +1,4 @@
-<section class="wrapper">
+<section class="bg-dark vh-100">
     <div class="container">
         <div class="row">
             <div class="col text-center mb-5">
@@ -9,7 +9,7 @@
         <div class="row">
 
             <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-                <div class="card pcard img-hover-effect bg-dark text-white">
+                <div class="card pcard card-hover-effect img-hover-effect bg-dark text-white">
                     <img src="../assets/img//prj04.png" class="card-img" alt="Stony Beach" />
                     <div class="card-img-overlay">
                         <h5 class="card-title fs-5">Feasibility analysis of sea water salt scaling</h5>
