education section finished

--- a/pages/education.html
+++ b/pages/education.html
@@ -1,19 +1,20 @@
-<div class="bg-dark p-3 p-md-5 vh-100 ">
-	<div class="rounded">
-		<div class="col-sm-10 col-md-8 card-hover-effect">
+<div class="bg-dark p-3 p-md-5 fade-me-in">
+	<div class="container">
+
+		<div class="mt-sm-2 mt-md-2 mb-3 d-flex justify-content-center align-items-center text-center">
 			<div class="text-white">
-				<h4>Petroleum Reservoir Engineering</h4>
-				<h6>Petroleum University of Technology (PUT)</h6>
+				<h4 class="fs-2">Petroleum Reservoir Engineering</h4>
+				<h6 class="fs-5">Petroleum University of Technology (PUT)</h6>
 				<h6>Tehran, Iran</h6>
 				<h6 class="fst-italic">2011-2015</h6>
 			</div>
 		</div>
 
 		<div class="row mt-2 mt-md-4">
-			<div class="col-lg-3 mb-2 ">
-				<div class="border border-1 border-secondary rounded-top rounded-3 hover-scale-up">
-					<div class="bg-white">
-						<span class="text-dark px-2 py-1">Activities and Societies</span>
+			<div class="col-md-6 mb-2 ">
+				<div class="border-hover-effect">
+					<div class="text-white">
+						<span class="fw-bold px-2 py-1">Activities and Societies</span>
 					</div>
 					<div class="px-2 py-1 text-white fw-light">
 						<ul>
@@ -32,10 +33,10 @@
 				</div>
 			</div>
 
-			<div class="col-lg-3 mb-2 ">
-				<div class="border border-1 border-secondary rounded-top rounded-3 hover-scale-up">
-					<div class="bg-white">
-						<span class="text-dark px-2 py-1">Honors and Awards</span>
+			<div class="col-md-6 mb-2 ">
+				<div class="border-hover-effect">
+					<div class="text-white">
+						<span class="fw-bold px-2 py-1">Honors and Awards</span>
 					</div>
 					<div class="px-2 py-1 text-white fw-light">
 						<ul>
@@ -54,27 +55,30 @@
 				</div>
 			</div>
 
-			<div class="col-lg-3 mb-2 ">
-				<div class="border border-1 border-secondary rounded-top rounded-3 hover-scale-up">
-					<div class="bg-white">
-						<span class="text-dark px-2 py-1">Publications</span>
+			<div class="col-md-6 mb-2 ">
+				<div class="border-hover-effect">
+					<div class="text-white">
+						<span class="fw-bold px-2 py-1">Publications</span>
 					</div>
 					<div class="px-2 py-1 text-white fw-light">
 						<ul>
 							<li>
 								Impacts of Spatial Distribution of Pore Fluids and Heat Flow Direction on Effective
 								Thermal Conductivity of Rocks
+								<br>
 								<a class="fst-italic text-small" href="https://doi.org/10.3997/2214-4609.201601065">https://doi.org/10.3997/2214-4609.201601065</a>
 							</li>
 							<li>
 								Comparative Study of Different Oil and Gas Relative Permeability Models for Iranian
 								Carbonates [A Statistical Approach]
+								<br>
 								<a class="fst-italic text-small" href="https://doi.org/10.3997/2214-4609.201600206">https://doi.org/10.3997/2214-4609.201600206</a>
 
 							</li>
 							<li>
 								Design and Construction of a High Pressure and High Temperature Apparatus for Measuring
 								Rock Thermal Conductivity
+								<br>
 								<a class="fst-italic text-small" href="https://doi.org/10.3997/2214-4609.201600201">https://doi.org/10.3997/2214-4609.201600201</a>
 
 							</li>
@@ -83,10 +87,10 @@
 				</div>
 			</div>
 
-			<div class="col-lg-3 mb-2 ">
-				<div class="border border-1 border-secondary rounded-top rounded-3 hover-scale-up">
-					<div class="bg-white">
-						<span class="text-dark px-2 py-1">Patents</span>
+			<div class="col-md-6 mb-2 ">
+				<div class="border-hover-effect">
+					<div class="text-white">
+						<span class="fw-bold px-2 py-1">Patents</span>
 					</div>
 					<div class="px-2 py-1 text-white fw-light">
 						<ul>
