fade-in transition added to all pages and project color changed to bright

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid fade-me-in">
   <div class="d-flex justofy-content-between">
     <div class="p-5 mt-3">
       <h1 class="fs-1">Mahdi Alavi</h1>
