--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="loader spinner-wheel htmx-indicator" id="spinner">
   </div>
 
-  <main id="main" class="" hx-get="./pages/home.html" hx-swap="innerHTML" hx-trigger="load delay:1s">
+  <main id="main" class="vh-100" hx-get="./pages/home.html" hx-swap="innerHTML" hx-trigger="load">
   </main>
 
   <section id="sidebar" hx-get="./sidebar.html" hx-swap="innerHTML" hx-trigger="load"></section>
