--- a/pages/projects-1.html
+++ b/pages/projects-1.html
@@ -1,4 +1,4 @@
-<div class="bg-dark p-3">
+<div class="p-3 fade-me-in">
     <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
             <div class="card border border-1 border-secondary mb-3" style="max-width: 540px;">
