--- a/pages/projects-2.html
+++ b/pages/projects-2.html
@@ -1,13 +1,6 @@
-<section class="bg-dark vh-100">
+<section class="fade-me-in">
     <div class="container">
         <div class="row">
-            <div class="col text-center mb-5">
-                <h1 class="display-4 font-weight-bolder">Bootstrap 4 cards With Background Image</h1>
-                <p class="lead">Lorem ipsum dolor sit amet at enim hac integer volutpat maecenas pulvinar. </p>
-            </div>
-        </div>
-        <div class="row">
-
             <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
                 <div class="card pcard card-hover-effect img-hover-effect bg-dark text-white">
                     <img src="../assets/img//prj04.png" class="card-img" alt="Stony Beach" />
@@ -21,11 +14,6 @@
                     </div>
                 </div>
             </div>
-
-
-
-
-
         </div>
 
     </div>
