--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,6 +1,6 @@
-<div class="bg-dark">
+<div class="fade-me-in">
     <!-- Tabs navs -->
-    <ul class="nav nav-tabs py-2 mb-3 d-flex justify-content-center bg-dark text-white" id="ex1" role="tablist">
+    <ul class="nav nav-tabs py-2 mb-3 d-flex justify-content-center text-white" id="ex1" role="tablist">
         <li class="nav-item" role="button">
             <a class="nav-link fw-bold active" hx-get="./pages/projects-1.html" hx-swap="innerHTML" hx-target="#proj-tab-content" hx-trigger="load, click" id="proj-tab-1" role="tab">Petroleum Engineering</a>
         </li>
