--- a/pages/skills.html
+++ b/pages/skills.html
@@ -1,4 +1,4 @@
-<div class="row p-3 my-2">
+<div class="row p-3 my-2 fade-me-in">
   <div class="col-md-4">
     <div class="card p-3">
       <div class="card-header text-center">
