--- a/pages/projects-1.html
+++ b/pages/projects-1.html
@@ -1,28 +1,25 @@
-<div class="p-3 fade-me-in">
-    <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-            <div class="card border border-1 border-secondary mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="./assets/img/p_dra.jpg" class="rounded-start project-image" alt="...">
+<section class="fade-me-in">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+                <div class="pcard card img-hover-effect bg-dark text-white">
+                    <img src="../assets/img//prj04.png" class="card-img" alt="Stony Beach" />
+                    <div class="d-flex align-items-start flex-column h-100 card-body text-center">
+                        <h5 class="card-title fs-5">Feasibility Study of Salt Scaling in Downhole Tubulars and
+                            Downstream Production Facilities in South Pars Gas Field</h5>
+                        <p class="card-text">
+                            This is a wider card with supporting text below as a natural lead-in to additional
+                            content. This content is a little bit longer.
+                        </p>
+                        <p class="card-text">2018</p>
                     </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">Well Test Software</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
-                            <div>
-                                <button class="btn btn-sm btn-primary">github</button>
-                                <button class="btn btn-sm btn-primary">Read more</button>
 
-                            </div>
-                        </div>
-                    </div>
+                    <div class="card-button">
+                        <button class="btn btn-dark btn-floating btn-lg"><i class="fa fa-eye fa-lg"
+                                aria-hidden="true"></i></button> </div>
+
                 </div>
             </div>
         </div>
-
     </div>
-
-
-</div>
+</section>
