--- a/pages/home.html
+++ b/pages/home.html
@@ -1,26 +1,28 @@
-<div class="container-fluid fade-me-in">
-  <div class="d-flex justofy-content-between">
-    <div class="p-5 mt-3">
+<div class="container-fluid fade-me-in bg-dark min-vh-100" hx-get="./pages/projects.html" hx-trigger="revealed"
+  hx-swap="afterend">
+  <div class="d-flex justify-content-between">
+    <div class="p-5 mt-3 text-white">
       <h1 class="fs-1">Mahdi Alavi</h1>
       <h6 class="fs-5 fw-lighter">Petroleum Engineer | Software Developer</h6>
       <div class="mt-3">
         <button class="btn btn-sm btn-primary py-2 px-3 fw-bold">
-          <i class="fa-solid fa-download fs-6 me-2"></i>Download CV
+          <i class="fas fa-download fs-6 me-2"></i>Download CV
         </button>
         <button class="btn btn-sm btn-dark py-2 px-3 fw-bold">
           <i class="fa-solid fa-list-check fs-6 me-2"></i>Projects
         </button>
       </div>
 
-      <p class="mt-3 text-wrap">
+      <p class="mt-3 text-wrap text-white">
         Software Developer and Petroleum Reservoir Engineer curently working as
         technical engineer in upstream sector of Oil and Gas industry.
         Self-motivated and skilful in creative problem solving, time management
         and critical thinking with succesful teamwork and leadership expreince.
       </p>
+
     </div>
-    <div class="ripple">
-      <img class="img-fluid rounded-circle" src="./assets/img/me.jpg" alt="" />
-    </div>
+
+
+
   </div>
 </div>
