--- a/pages/projects-2.html
+++ b/pages/projects-2.html
@@ -4,17 +4,75 @@
             <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
                 <div class="card pcard card-hover-effect img-hover-effect bg-dark text-white">
                     <img src="../assets/img//prj04.png" class="card-img" alt="Stony Beach" />
-                    <div class="card-img-overlay">
-                        <h5 class="card-title fs-5">Feasibility analysis of sea water salt scaling</h5>
+                    <div class="card-img-overlay d-flex align-items-start flex-column h-100 mb-2">
+                        <h5 class="card-title fs-5">Feasibility Study of Salt Scaling in Downhole Tubulars and
+                            Downstream Production Facilities in South Pars Gas Field</h5>
                         <p class="card-text">
                             This is a wider card with supporting text below as a natural lead-in to additional
                             content. This content is a little bit longer.
                         </p>
-                        <p class="card-text">Last updated 3 mins ago</p>
+                        <p class="card-text">2018</p>
+                        <div class="mt-auto mb-2">
+                            <button class="btn btn-dark btn-floating"><i class="fa fa-eye fa-lg"
+                                    aria-hidden="true"></i></button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+                <div class="card pcard card-hover-effect img-hover-effect bg-dark text-white">
+                    <img src="../assets/img//prj04.png" class="card-img" alt="Stony Beach" />
+                    <div class="card-img-overlay d-flex align-items-start flex-column h-100 mb-2">
+                        <div class="card-body">
+                            <small class="card-meta mb-2">Thought Leadership</small>
+                            <h4 class="card-title mt-0 "><a class="text-dark" herf="https://creativemanner.com">Design
+                                    Studio Lorem Ipsum Sit Amet Consectetur dipisi?</a></h4>
+                            <small><i class="far fa-clock"></i> October 15, 2020</small>
+                        </div>
+                        <div class="card-footer">
+                            <div class="media">
+                                <img class="mr-3 rounded-circle"
+                                    src="https://assets.codepen.io/460692/internal/avatars/users/default.png?format=auto&version=1688931977&width=80&height=80"
+                                    alt="Generic placeholder image" style="max-width:50px">
+                                <div class="media-body">
+                                    <h6 class="my-0 text-dark d-block">Oz Coruhlu</h6>
+                                    <small>Director of UI/UX</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+                <div class="card text-dark card-has-bg click-col"
+                    style="background-image:url('https://source.unsplash.com/600x900/?computer,design');">
+                    <img class="card-img d-none" src="https://source.unsplash.com/600x900/?computer,design"
+                        alt="Creative Manner Design Lorem Ipsum Sit Amet Consectetur dipisi?">
+                    <div class="card-img-overlay d-flex flex-column">
+                        <div class="card-body">
+                            <small class="card-meta mb-2">Thought Leadership</small>
+                            <h4 class="card-title mt-0 "><a class="text-dark" herf="https://creativemanner.com">Design
+                                    Studio Lorem Ipsum Sit Amet Consectetur dipisi?</a></h4>
+                            <small><i class="far fa-clock"></i> October 15, 2020</small>
+                        </div>
+                        <div class="card-footer">
+                            <div class="media">
+                                <img class="mr-3 rounded-circle"
+                                    src="https://assets.codepen.io/460692/internal/avatars/users/default.png?format=auto&version=1688931977&width=80&height=80"
+                                    alt="Generic placeholder image" style="max-width:50px">
+                                <div class="media-body">
+                                    <h6 class="my-0 text-dark d-block">Oz Coruhlu</h6>
+                                    <small>Director of UI/UX</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
 </section>
