--- a/sidebar.html
+++ b/sidebar.html
@@ -7,19 +7,19 @@
     <div class="offcanvas-body">
         <div>
             <div class="list-group list-group-light">
-                <a class="list-group-item list-group-item-action px-3 border-0 ripple" role="button"
+                <a class="list-group-item list-group-item-action sidebar-item px-3 border-0 ripple" role="button"
                     hx-get="./pages/home.html" hx-swap="innerHTML" hx-target="#main">
                     Home</a>
-                <a class="list-group-item list-group-item-action px-3 border-0 ripple" hx-get="./pages/projects.html"
+                <a class="list-group-item list-group-item-action sidebar-item px-3 border-0 ripple" hx-get="./pages/projects.html"
                     hx-swap="innerHTML" hx-target="#main">
                     <span class="fw-light fs-6">Projects</span></a>
-                <a class="list-group-item list-group-item-action px-3 border-0 ripple" hx-get="./pages/education.html"
+                <a class="list-group-item list-group-item-action sidebar-item px-3 border-0 ripple" hx-get="./pages/education.html"
                     hx-swap="innerHTML" hx-target="#main" role="button">
                     Education</a>
-                <a class="list-group-item list-group-item-action px-3 border-0 ripple" hx-get="./pages/skills.html"
+                <a class="list-group-item list-group-item-action sidebar-item px-3 border-0 ripple" hx-get="./pages/skills.html"
                     hx-swap="innerHTML" hx-target="#main" role="button">
                     Skills</a>
-                <a href="#" class="list-group-item list-group-item-action px-3 border-0 ripple">
+                <a class="list-group-item list-group-item-action sidebar-item px-3 border-0 ripple">
                     Contact</a>
             </div>
         </div>
