pages style modified, icons added

--- a/circular-menue.html
+++ b/circular-menue.html
@@ -1,14 +1,18 @@
 <div id="circularMenu" class="circular-menu">
 
   <a class="floating-btn" onclick="document.getElementById('circularMenu').classList.toggle('active');">
-    <i class="fa fa-plus"></i>
+    <i class="fa fa-phone"></i>
   </a>
 
   <menu class="items-wrapper">
-    <a href="#" class="menu-item fa fa-facebook"></a>
-    <a href="#" class="menu-item fa fa-twitter"></a>
-    <a href="#" class="menu-item fa fa-google-plus"></a>
-    <a href="#" class="menu-item fa fa-linkedin"></a>
+    <a href="#" class="menu-item"><img
+      src="./assets/icons/skype.svg" alt=""></a>
+    <a href="#" class="menu-item"><img
+      src="./assets/icons/github.svg" alt=""></a>
+    <a href="#" class="menu-item"><img
+      src="./assets/icons/gmail.svg" alt=""></a>
+    <a href="#" class="menu-item"><img
+      src="./assets/icons/phone.svg" alt=""></a>
   </menu>
 
 </div>
