--- a/pages/education.html
+++ b/pages/education.html
@@ -1,4 +1,5 @@
-<div class="bg-dark p-3 p-md-5 fade-me-in">
+<div class="bg-dark p-3 p-md-5 fade-me-in" hx-get="./pages/skills.html" hx-trigger="revealed"
+hx-swap="afterend">
 	<div class="container">
 
 		<div class="mt-sm-2 mt-md-2 mb-3 d-flex justify-content-center align-items-center text-center">
