--- a/pages/home.html
+++ b/pages/home.html
@@ -1,28 +1,33 @@
-<div class="container-fluid fade-me-in bg-dark min-vh-100" hx-get="./pages/projects.html" hx-trigger="revealed"
-  hx-swap="afterend">
-  <div class="d-flex justify-content-between">
-    <div class="p-5 mt-3 text-white">
-      <h1 class="fs-1">Mahdi Alavi</h1>
-      <h6 class="fs-5 fw-lighter">Petroleum Engineer | Software Developer</h6>
-      <div class="mt-3">
-        <button class="btn btn-sm btn-primary py-2 px-3 fw-bold">
-          <i class="fas fa-download fs-6 me-2"></i>Download CV
-        </button>
-        <button class="btn btn-sm btn-dark py-2 px-3 fw-bold">
-          <i class="fa-solid fa-list-check fs-6 me-2"></i>Projects
-        </button>
+<div class="container min-vh-100 fade-me-in" hx-get="./pages/exprience.html" hx-trigger="revealed" hx-swap="afterend">
+
+    <div class="row g-5 mt-5 mb-3 ">
+      <div class="col-md-6">
+        <div>
+          <div class="mt-3 mb-5">
+            <h1 class="fs-1 fw-bolder">Mahdi Alavi</h1>
+            <h6 class="fs-4 fw-lighter">Petroleum Engineer | Software Developer</h6>
+          </div>
+          <div>
+            <button class="btn btn-sm btn-primary py-2 px-3 fw-bold">
+              <i class="fas fa-download fs-6 me-2"></i>Download CV
+            </button>
+            <button class="btn btn-sm btn-dark py-2 px-3 fw-bold">
+              <i class="fa-solid fa-list-check fs-6 me-2"></i>Projects
+            </button>
+          </div>
+        </div>
+        <p class="mt-3 text-wrap">
+          Software Developer and Petroleum Reservoir Engineer curently working as
+          technical engineer in upstream sector of Oil and Gas industry.
+          Self-motivated and skilful in creative problem solving, time management
+          and critical thinking with succesful teamwork and leadership expreince.
+        </p>
       </div>
 
-      <p class="mt-3 text-wrap text-white">
-        Software Developer and Petroleum Reservoir Engineer curently working as
-        technical engineer in upstream sector of Oil and Gas industry.
-        Self-motivated and skilful in creative problem solving, time management
-        and critical thinking with succesful teamwork and leadership expreince.
-      </p>
-
+      <div class="col-md-6">
+        <div class="d-flex justify-content-center">
+          <img class="shape" src="../assets/img/me.jpg" alt="">
+        </div>
+      </div>
     </div>
-
-
-
-  </div>
 </div>
