--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,4 +1,4 @@
-<div class="fade-me-in" hx-get="./pages/education.html" hx-trigger="revealed"
+<div class="container fade-me-in min-vh-100" hx-get="./pages/education.html" hx-trigger="revealed"
 hx-swap="afterend">
     <!-- Tabs navs -->
     <ul class="nav nav-tabs mt-3 mb-4 d-flex justify-content-center text-white" id="ex1" role="tablist">
