--- a/pages/skills.html
+++ b/pages/skills.html
@@ -1,93 +1,76 @@
-<div class="row p-3 my-2 fade-me-in">
-  <div class="col-md-4">
-    <div class="card p-3">
-      <div class="card-header text-center">
-        <span class="fs-5 fw-bold"
-          >Programming | Software and Web Development</span
-        >
-      </div>
-      <div class="card-body">
-        <div class="mb-1">
-          <span class="badge badge-primary">Python</span>
-          <span class="badge badge-primary">VB.NET</span>
-          <span class="badge badge-primary">C#</span>
-          <span class="badge badge-primary">Python</span>
-        </div>
-        <hr class="hr hr-blurry" />
-        <div class="mb-1">
-          <span class="badge badge-primary">Django</span>
-          <span class="badge badge-primary">FastAPI</span>
-          <span class="badge badge-primary">SQLALchemy</span>
-          <span class="badge badge-primary">Python</span>
-        </div>
-        <hr class="hr hr-blurry" />
-
-        <div class="mb-1">
-          <span class="badge badge-primary">Linux</span>
-          <span class="badge badge-primary">git</span>
-          <span class="badge badge-primary">Docker</span>
-        </div>
-        <hr class="hr hr-blurry" />
-
-        <div class="mb-1">
-          <span class="badge badge-primary">SQL Server</span>
-          <span class="badge badge-primary">PostgreSQL</span>
-          <span class="badge badge-primary">MongoDB</span>
-        </div>
-        <hr class="hr hr-blurry" />
-
-        <div class="mb-1">
-          <span class="badge badge-primary">HTML</span>
-          <span class="badge badge-primary">CSS</span>
-          <span class="badge badge-primary">Bootstrap</span>
-          <span class="badge badge-primary">HTMX</span>
-          <span class="badge badge-primary">React</span>
-          <span class="badge badge-primary">AlpineJS</span>
-          <span class="badge badge-primary">Javascript</span>
+<div class="container min-vh-100">
+  <div class="row mt-5 mb-2 fade-me-in">
+    <div class="col-md-4 mb-3">
+      <div class="skill-card border-hover-effect p-3">
+          <h5 class="fs-5 fw-bold text-center py-2">Programming | Software and Web Development</h5>
+        <div class="">
+          <div class="mb-1">
+            <span class="badge badge-primary">Python</span>
+            <span class="badge badge-primary">VB.NET</span>
+            <span class="badge badge-primary">C#</span>
+            <span class="badge badge-primary">Python</span>
+          </div>
+          <div class="mb-1">
+            <span class="badge badge-primary">Django</span>
+            <span class="badge badge-primary">FastAPI</span>
+            <span class="badge badge-primary">SQLALchemy</span>
+            <span class="badge badge-primary">Python</span>
+          </div>
+          <div class="mb-1">
+            <span class="badge badge-primary">Linux</span>
+            <span class="badge badge-primary">git</span>
+            <span class="badge badge-primary">Docker</span>
+          </div>
+          <div class="mb-1">
+            <span class="badge badge-primary">SQL Server</span>
+            <span class="badge badge-primary">PostgreSQL</span>
+            <span class="badge badge-primary">MongoDB</span>
+          </div>
+          <div class="mb-1">
+            <span class="badge badge-primary">HTML</span>
+            <span class="badge badge-primary">CSS</span>
+            <span class="badge badge-primary">Bootstrap</span>
+            <span class="badge badge-primary">HTMX</span>
+            <span class="badge badge-primary">React</span>
+            <span class="badge badge-primary">AlpineJS</span>
+            <span class="badge badge-primary">Javascript</span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="col-md-4">
-    <div class="card">
-        <div class="card-header text-center">
-            <span class="fs-5 fw-bold"
-            >Petroleum Engineering</span
-          >
-        </div>
-        <div class="card-body p-3">
-            <div>
-                <span class="badge badge-info">Pipesim</span>
-                <span class="badge badge-info">RCAL</span>
-                <span class="badge badge-info">Well Integrity</span>
-                <span class="badge badge-info">Well Test Analysis</span>
-                <span class="badge badge-info">Water Sampling & Analysis</span>
-                <span class="badge badge-info">Scaling Analysis</span>
-            </div>
-   
+    <div class="col-md-4 mb-3">
+      <div class="skill-card border-hover-effect p-3">
+          <h4 class="fs-5 fw-bold text-center">Petroleum Engineering</h4>
+        <div class="">
+          <div>
+            <span class="badge badge-info">Pipesim</span>
+            <span class="badge badge-info">RCAL</span>
+            <span class="badge badge-info">Well Integrity</span>
+            <span class="badge badge-info">Well Test Analysis</span>
+            <span class="badge badge-info">Water Sampling & Analysis</span>
+            <span class="badge badge-info">Scaling Analysis</span>
+          </div>
+
         </div>
 
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-3">
+      <div class="skill-card border-hover-effect p-3">
+          <h4 class="fs-5 fw-bold py-2 text-center">Miscellaneous
+          </h4>
+        <div class="">
+          <div>
+            <span class="badge badge-info">Matlab</span>
+            <span class="badge badge-info">Solidworks 2D & 3D</span>
+            <span class="badge badge-info">Photoshop</span>
+            <span class="badge badge-info">Wordpress</span>
+          </div>
+        </div>
+
+      </div>
     </div>
   </div>
 
-  <div class="col-md-4">
-    <div class="card">
-        <div class="card-header">
-            <span class="fs-5 fw-bold"
-            >Miscellaneous
-            </span
-          >
-        </div>
-        <div class="card-body">
-            <div>
-                <span class="badge badge-info">Matlab</span>
-                <span class="badge badge-info">Solidworks 2D & 3D</span>
-                <span class="badge badge-info">Photoshop</span>
-                <span class="badge badge-info">Wordpress</span>
-
-            </div>
-        </div>
-       
-    </div>
-  </div>
 </div>
