project template modified with row-cols

--- a/pages/projects-1.html
+++ b/pages/projects-1.html
@@ -1,25 +1,45 @@
 <section class="fade-me-in">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
-                <div class="pcard card img-hover-effect bg-dark text-white">
-                    <img src="../assets/img//prj04.png" class="card-img" alt="Stony Beach" />
-                    <div class="d-flex align-items-start flex-column h-100 card-body text-center">
-                        <h5 class="card-title fs-5">Feasibility Study of Salt Scaling in Downhole Tubulars and
-                            Downstream Production Facilities in South Pars Gas Field</h5>
-                        <p class="card-text">
-                            This is a wider card with supporting text below as a natural lead-in to additional
-                            content. This content is a little bit longer.
-                        </p>
-                        <p class="card-text">2018</p>
-                    </div>
+    <div class="">
+        <div class="row row-cols-md-2 row-cols-lg-3">
+            <div class="col">
+                <div class="pcard">
 
-                    <div class="card-button">
-                        <button class="btn btn-dark btn-floating btn-lg"><i class="fa fa-eye fa-lg"
-                                aria-hidden="true"></i></button> </div>
+                    <img src="../assets/img/p_scale.jpg" alt="">
+                    <div>
+                        <h2>
+                            Salt Scaling analysis
+                        </h2>
+                        <a href="www.google.com" class="button">
+                            Find out more
+                        </a>
+                    </div>
 
                 </div>
             </div>
+            <div class="col">
+                <div class="pcard">
+                    <img src="../assets/img/p_dra.jpg" alt="">
+                    <h2>
+                        Salt scaling analysi of oilfield water
+                    </h2>
+                    <a href="www.google.com" class="button">
+                        Find out more
+                    </a>
+                </div>
+            </div>
+            <div class="col">
+                <div class="pcard">
+                    <img src="../assets/img/tec.jpg" alt="">
+                    <h2>
+                        Salt scaling analysi of oilfield water
+                    </h2>
+                    <a href="www.google.com" class="button">
+                        Find out more
+                    </a>
+                </div>
+            </div>
         </div>
+
+
     </div>
 </section>
