--- a/pages/projects.html
+++ b/pages/projects.html
@@ -3,15 +3,10 @@ hx-swap="afterend">
     <!-- Tabs navs -->
     <ul class="nav nav-tabs mt-3 mb-4 d-flex justify-content-center text-white" id="ex1" role="tablist">
         <li class="nav-item" role="button">
-            <a class="nav-link fw-bold active" hx-get="./pages/projects-1.html" hx-swap="innerHTML"
+            <a class="nav-link fs-6 active" hx-get="./pages/projects-1.html" hx-swap="innerHTML"
                 hx-target="#proj-tab-content" hx-trigger="load, click" id="proj-tab-1" role="tab">Petroleum
                 Engineering</a>
         </li>
-        <li class="nav-item" role="button">
-            <a class="nav-link fw-bold" hx-get="./pages/projects-2.html" hx-swap="innerHTML"
-                hx-target="#proj-tab-content" hx-trigger="click" id="proj-tab-2" role="tab">Web Development</a>
-        </li>
-
         <li class="nav-item" role="button">
             <a class="nav-link fw-bold" hx-get="./pages/projects-3.html" hx-swap="innerHTML"
                 hx-target="#proj-tab-content" id="proj-tab-3" role="tab">Software and Web Development</a>
