project read more template added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="./assets/css/mdb.min.css" rel="stylesheet" />
   <link href="./assets/css/main.css" rel="stylesheet" />
   <script src="./assets/js/htmx.min.js"></script>
-
+  
   <title>Mahdi Alavi CV</title>
 </head>
 
@@ -21,13 +21,15 @@
   <main id="main" class="vh-100" hx-get="./pages/home.html" hx-swap="innerHTML" hx-trigger="load">
   </main>
 
+
   <section id="circular-menue" hx-get="./circular-menue.html" hx-swap="innerHTML" hx-trigger="load"></section>
 
-
+  <script src="./assets/js/bootstrap.min.js"></script>
+  <script src="./assets/js/mdb.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   <script src="./assets/js/popper.min.js"></script>
-  <script src="./assets/js/mdb.min.js"></script>
+
 
 </body>
 
