--- a/circular-menue.html
+++ b/circular-menue.html
@@ -1,44 +1,41 @@
 <div id="circularMenu" class="circular-menu">
 
-  <a class="floating-btn d-flex justify-content-center align-items-center" onclick="document.getElementById('circularMenu').classList.toggle('active');">
-    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
-      <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+  <a class="floating-btn d-flex justify-content-center align-items-center"
+    onclick="document.getElementById('circularMenu').classList.toggle('active');">
+    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-telephone"
+      viewBox="0 0 16 16">
+      <path
+        d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
     </svg>
   </a>
 
   <menu class="items-wrapper">
-    <a href="#" class="menu-item"><img
-      src="./assets/icons/skype.svg" alt=""></a>
-    <a href="#" class="menu-item"><img
-      src="./assets/icons/github.svg" alt=""></a>
-    <a href="#" class="menu-item"><img
-      src="./assets/icons/gmail.svg" alt=""></a>
-    <a href="#" class="menu-item"><img
-      src="./assets/icons/phone.svg" alt=""></a>
+    <a href="#" class="menu-item"><img src="./assets/icons/skype.svg" alt=""></a>
+    <a href="#" class="menu-item"><img src="./assets/icons/github.svg" alt=""></a>
+    <a href="#" class="menu-item"><img src="./assets/icons/gmail.svg" alt=""></a>
+    <a href="#" class="menu-item"><img src="./assets/icons/phone.svg" alt=""></a>
   </menu>
 
 </div>
 
 
-<div id="circularMenu1" class="circular-menu circular-menu-left active">
+<div id="circularMenu1" class="circular-menu circular-menu-left">
 
   <a class="floating-btn" onclick="document.getElementById('circularMenu1').classList.toggle('active');">
-    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-      <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
-    </svg>
+    Menu
   </a>
 
   <menu class="items-wrapper">
     <a hx-get="./pages/home.html" hx-swap="innerHTML" hx-target="#main" class="menu-item"><img
-      src="./assets/icons/home.svg" alt=""></a>
+        src="./assets/icons/home.svg" alt=""></a>
     <a hx-get="./pages/exprience.html" hx-swap="innerHTML" hx-target="#main" class="menu-item"><img
-      src="./assets/icons/work.svg" alt=""></a>
+        src="./assets/icons/work.svg" alt=""></a>
     <a hx-get="./pages/projects.html" hx-swap="innerHTML" hx-target="#main" class="menu-item"><img
-      src="./assets/icons/projects.svg" alt=""></a>
+        src="./assets/icons/projects.svg" alt=""></a>
     <a hx-get="./pages/education.html" hx-swap="innerHTML" hx-target="#main" class="menu-item"><img
         src="./assets/img/education-svgrepo-com.svg" alt=""></a>
     <a hx-get="./pages/skills.html" hx-swap="innerHTML" hx-target="#main" class="menu-item"><img
-      src="./assets/icons/skills.svg" alt=""></a>
+        src="./assets/icons/skills.svg" alt=""></a>
 
   </menu>
 
