projects updated and img directories modified

--- a/pages/projects-1.html
+++ b/pages/projects-1.html
@@ -1,42 +1,113 @@
 <section class="fade-me-in">
     <div class="">
         <div class="row row-cols-md-2 row-cols-lg-3">
-            <div class="col">
-                <div class="pcard">
-
-                    <img src="../assets/img/p_scale.jpg" alt="">
-                    <div>
-                        <h2>
-                            Salt Scaling analysis
-                        </h2>
-                        <button hx-get="./pages/projects/project001.html" hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button" class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">
-                            Read More ...
-                          </button>
-
+            <div class="col mb-3">
+                <div class="card shadow-5">
+                    <img src="../assets/img/p_scale.jpg" class="card-img-top card-image" alt="" />
+                    <div class="px-3 py-2 fw-bold fs-6">
+                        Feasibility Study Of Salt Scaling In Downhole Tubulars And Downstream Production Facilities In
+                        South Pars Gas Field
                     </div>
+                    <div class="card-footer">
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                            hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
+                            class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
+                            More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-3">
+                <div class="card shadow-5">
+                    <img src="../assets/img/porescale.jpg" class="card-img-top card-image" alt="" />
+                    <div class="px-3 py-2 fw-bold fs-6">
+                        Study of Spatial Distribution of Pore Fluids on Effective Thermal Conductivity of Rocks
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                            hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
+                            class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
+                            More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col mb-3">
+                <div class="card shadow-5">
+                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <div class="px-3 py-2 fw-bold fs-6">
+                        Design and Construction of a High Pressure and High Temperature Apparatus for Measuring Rock
+                        Thermal Conductivity
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                            hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
+                            class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
+                            More</button>
+                    </div>
+                </div>
+            </div>
 
+            <div class="col mb-3">
+                <div class="card shadow-5">
+                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <div class="px-3 py-2 fw-bold fs-6">
+                        Well modeling of South Pars giant gas field gas producing wells using Pipesim
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                            hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
+                            class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
+                            More</button>
+                    </div>
                 </div>
             </div>
-            <div class="col">
-                <div class="pcard">
-                    <img src="../assets/img/p_dra.jpg" alt="">
-                    <h2>
-                        Salt scaling analysi of oilfield water
-                    </h2>
-                    <a href="www.google.com" class="button">
-                        Find out more
-                    </a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="pcard">
-                    <img src="../assets/img/tec.jpg" alt="">
-                    <h2>
-                        Salt scaling analysi of oilfield water
-                    </h2>
 
+            <div class="col mb-3">
+                <div class="card shadow-5">
+                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <div class="px-3 py-2 fw-bold fs-6">
+                        Virtual produced water flow meter for South Pars Gas Field Wells
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                            hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
+                            class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
+                            More</button>
+                    </div>
                 </div>
             </div>
+
+            <div class="col mb-3">
+                <div class="card shadow-5">
+                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <div class="px-3 py-2 fw-bold fs-6">
+                        Development of localized well integrty management standard for gas producing wells in
+                        production life cycle
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                            hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
+                            class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
+                            More</button>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col mb-3">
+                <div class="card shadow-5">
+                    <img src="../assets/img/tec.jpg" class="card-img-top card-image" alt="" />
+                    <div class="px-3 py-2 fw-bold fs-6">
+                        Surface gas well test analysis and interpretation
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-sm btn-primary" hx-get="./pages/projects/project001.html"
+                            hx-swap="innerHTML" hx-trigger="click" hx-target="#modalContent" type="button"
+                            class="btn btn-sm btn-primary" data-bs-toggle="modal" data-bs-target="#projectModal">Read
+                            More</button>
+                    </div>
+                </div>
+            </div>
+            
+
         </div>
 
 
@@ -46,7 +117,7 @@
 <!-- Modal -->
 <div class="modal fade" id="projectModal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-scrollable">
-      <div class="modal-content" id="modalContent">
-      </div>
+        <div class="modal-content" id="modalContent">
+        </div>
     </div>
-  </div>
+</div>
