--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,19 +1,17 @@
 <div class="container fade-me-in min-vh-100" hx-get="./pages/education.html" hx-trigger="revealed"
 hx-swap="afterend">
     <!-- Tabs navs -->
-    <ul class="nav nav-tabs mt-3 mb-4 d-flex justify-content-center text-white" id="ex1" role="tablist">
+    <ul class="nav nav-tabs mt-3 mb-4 d-flex justify-content-center " id="ex1" role="tablist">
         <li class="nav-item" role="button">
             <a class="nav-link fs-6 active" hx-get="./pages/projects-1.html" hx-swap="innerHTML"
                 hx-target="#proj-tab-content" hx-trigger="load, click" id="proj-tab-1" role="tab">Petroleum
                 Engineering</a>
         </li>
         <li class="nav-item" role="button">
-            <a class="nav-link fw-bold" hx-get="./pages/projects-3.html" hx-swap="innerHTML"
+            <a class="nav-link fs-6" hx-get="./pages/projects-2.html" hx-swap="innerHTML"
                 hx-target="#proj-tab-content" id="proj-tab-3" role="tab">Software and Web Development</a>
         </li>
-        <li class="nav-item" role="button">
-            <a class="nav-link fw-bold" id="proj-tab-3" role="tab">Others</a>
-        </li>
+
     </ul>
 
     <!-- Tabs navs -->
