--- a/pages/projects/project001.html
+++ b/pages/projects/project001.html
@@ -1,5 +1,6 @@
 <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+    <h5 class="fs-6" id="exampleModalLabel">Feasibility Study Of Salt Scaling In Downhole Tubulars And Downstream Production Facilities In South Pars Gas Field
+    </h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
 <div class="modal-body">
@@ -12,43 +13,22 @@
                 <div class="carousel-indicators">
                     <button type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-mdb-target="#carouselMaterialStyle" data-mdb-slide-to="2"
-                        aria-label="Slide 3"></button>
+              
                 </div>
 
                 <!-- Inner -->
                 <div class="carousel-inner rounded-5 shadow-4-strong">
                     <!-- Single item -->
                     <div class="carousel-item active">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100"
+                        <img src="../../assets/img/p_scale.jpg" class="d-block w-100"
                             alt="Sunset Over the City" />
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                            <h5></h5>
+                            <p></p>
                         </div>
                     </div>
 
-                    <!-- Single item -->
-                    <div class="carousel-item">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100"
-                            alt="Canyon at Nigh" />
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                    </div>
 
-                    <!-- Single item -->
-                    <div class="carousel-item">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp" class="d-block w-100"
-                            alt="Cliff Above a Stormy Sea" />
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                        </div>
-                    </div>
                 </div>
                 <!-- Inner -->
 
